# ATLAS

./: CMakeLists.txt  LICENSE.txt  README.md  THIRD_PARTY_NOTICES.md
BUILDER/: BUILDER.py  CMakeLists.txt  README.md
CoherentAtlasConstruction/: CMakeLists.txt  CoherentAtlasConstruction.py
CoherentAtlasConstruction/Resources/Python/: ConstructionImplementation.py
CoherentAtlasFragmentation/: CMakeLists.txt  CoherentAtlasFragmentation.py
CoherentAtlasLibrary/: CMakeLists.txt  CoherentAtlasLibrary.py
CoherentAtlasLibrary/Resources/Python/: LegacyDatabase.py
CoherentAtlasTransfer/: CMakeLists.txt  CoherentAtlasTransfer.py
CoherentAtlasTransfer/Resources/Python/: TransferImplementation.py  __init__.py
CoherentAtlasTransfer/Testing/Python/: PoseEMInitializationTest.py
DATABASE/: CMakeLists.txt  DATABASE.py
Docs/: ConstructionLineage.md  ExtensionCatalogSubmission.md
ExtensionsIndex/: MorphoWeave.json
MorphoWeaveAtlasBuilder/: CMakeLists.txt  MorphoWeaveAtlasBuilder.py  README.md
MorphoWeaveAtlasBuilder/Testing/Python/: AtlasBuilderWorkflowTest.py
MorphoWeaveLandmarkTransfer/: CMakeLists.txt  MorphoWeaveLandmarkTransfer.py
MorphoWeaveLandmarkTransfer/Resources/Python/: PoseEMTemplate.py  __init__.py
MorphoWeaveLandmarkTransfer/Testing/Python/: PoseEMTemplateTest.py  SSMSelectionTest.py
MorphoWeaveModelLibrary/: CMakeLists.txt  MorphoWeaveModelLibrary.py
MorphoWeaveSurfaceSegmentation/: CMakeLists.txt  MorphoWeaveSurfaceSegmentation.py
PREDICT/: CMakeLists.txt  PREDICT.py  PoseEMTemplate.py  README.md
PREDICT/Resources/Python/: PoseEMTemplate.py  __init__.py
PREDICT/Testing/Python/: PoseEMTemplateTest.py
SEGMENTATION/: CMakeLists.txt  SEGMENTATION.py
tutorial/: README.md
